# earthkit-utils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  conftest.py  environment.yml  pyproject.toml  pytest.ini
.github/: ci-hpc-config.yml  ci-hpc-gpu-config.yml
.github/workflows/: cd-pypi.yml  ci.yml  nightly-hpc-gpu.yml
ci/: combined-environment-ci.yml  environment-ci.yml
docs/source/notebooks/: decorator-examples.ipynb  dispatcher-examples.ipynb  format-handler-examples.ipynb  unit-conversion-examples.ipynb
src/earthkit/: __init__.py  __int__.py  _ensurers.py
src/earthkit/utils/: __init__.py  array.py  constants.py  decorators.py  testing.py  units.py
src/earthkit/utils/array/: __init__.py  array_backend.py  array_namespace.py  backend.py  convert.py  device.py  dtype.py
src/earthkit/utils/array/backends/: __init__.py  abstract.py  cupy.py  jax.py  numpy.py  torch.py
src/earthkit/utils/array/converter/: __init__.py  cupy.py  jax.py  numpy.py  torch.py  unknown.py
src/earthkit/utils/array/namespace/: __init__.py  abstract.py  cupy.py  jax.py  namespace.py  numpy.py  torch.py  unknown.py
src/earthkit/utils/array/testing/: __init__.py  backend.py  dtype.py  testing.py
src/earthkit/utils/array/testing/backends/: __init__.py  cupy.py  jax.py  numpy.py  torch.py  unknown.py
src/earthkit/utils/array/testing_backends/: __init__.py
src/earthkit/utils/array/testing_backends/backends/: __init__.py
src/earthkit/utils/decorators/: __init__.py  _dispatch.py  _experimental.py  _format_handlers.py  _thread_handlers.py  dispatch.py  dispatchers.py  experimental.py  format_handler.py  format_handlers.py  metadata_handler.py  xarray_ufunc.py  xarray_ufunc_2.py
src/earthkit/utils/namespace/: cupy.py  torch.py
src/earthkit/utils/units/: __init__.py  convert.py  units.py
tests/: downstream-ci-requirements.txt  environment-unit-tests.yml  test_array.py  test_array_backend.py  test_array_convert.py  test_array_namespace.py  test_convert_units.py  test_dispatch.py  test_dispatchers.py  test_experimental.py  test_format_handlers.py  test_theread_safe_cached_property.py  test_thread_safe_cached_property.py  test_units.py  test_version.py  test_xarray_ufunc.py
