[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]

[project]
authors = [
  {name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "array-api-compat",
  "pint"
]
description = "Utilities for the Earthkit ecosystem"
dynamic = ["version"]
license = "Apache-2.0"
license-files = ["LICENSE"]
name = "earthkit-utils"
readme = "README.md"
requires-python = ">=3.10"
optional-dependencies.dev = [
  "numpy",
  "pytest",
  "pytest-cov"
]
optional-dependencies.docs = [
  "nbsphinx",
  "pygments>=2.6.1",
  "sphinx>=7.3.7",
  "sphinx-autoapi",
  "sphinx-copybutton",
  "sphinx-issues",
  "sphinx-rtd-theme",
  "sphinx-tabs"
]
optional-dependencies.test = [
  "earthkit-data",
  "nbconvert",
  "nbformat",
  "pytest",
  "pytest-cov",
  "pytest-reraise",
  "xarray"
]
urls.Documentation = "https://earthkit-utils.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/earthkit-utils/"
urls.Issues = "https://github.com/ecmwf/earthkit-utils/issues"
urls.Repository = "https://github.com/ecmwf/earthkit-utils/"

[tool.coverage.run]
branch = "true"

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = ["D1", "D200", "D205", "D400", "D401"]
convention = "numpy"

[tool.ruff]
line-length = 120
preview = true
lint.ignore = [
  "D1",
  "D203",
  "D212",
  "D213",
  "D401",
  "D404",
  "D413"
]
lint.select = [
  "D",  # pydocstyle
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "W"  # pycodestyle warnings
]

[tool.setuptools.packages.find]
include = ["earthkit.utils"]
where = ["src/"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "src/earthkit/utils/_version.py"
